fix(icon): dark mode support for status icons

--- a/src/less/icon/base/icon.less
+++ b/src/less/icon/base/icon.less
@@ -18,6 +18,8 @@ svg {
 
     &.icon--attention-filled {
         .foreground-icon-image-mixin("attention-filled");
+
+        color: @color-status-attention;
     }
 
     &.icon--back {
@@ -674,6 +676,8 @@ svg {
 
     &.icon--attention-filled-small {
         .foreground-icon-image-mixin("attention-filled-small");
+
+        color: @color-status-attention;
     }
 
     &.icon--camera-small {
@@ -836,5 +840,24 @@ svg {
     &.icon--pagination-next,
     &.icon--pagination-prev {
         transform: rotate(180deg);
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    svg {
+        &.icon--attention-filled,
+        &.icon--attention-filled-small {
+            color: @color-status-attention-dark-mode;
+        }
+
+        &.icon--confirmation-filled,
+        &.icon--confirmation-filled-small {
+            color: @color-status-confirmation-dark-mode;
+        }
+
+        &.icon--information-filled,
+        &.icon--information-filled-small {
+            color: @color-status-information-dark-mode;
+        }
     }
 }
